--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="background-layer"></div>
 <div class="fog-layer"></div>
 
-<main class="game-container">
+<main class="main-intro">
     <h1>Echoes of the Pines</h1>
     <p style="opacity: 0.9; font-family: 'CMU Classical Serif', serif; font-size: 13pt;">
         the forest remembers what you have forgotten.
