--- a/scenes/ranger-path.html
+++ b/scenes/ranger-path.html
@@ -40,16 +40,16 @@
             But there are no lights. Just the deepening gloom of the forest.
         </p>
         <div class="comic-panel">
-            <img src="../thingsUsed/bg.png" alt="Thick forest path with glowing eyes">
+            <img src="../thingsUsed/tower.jpg" alt="Thick forest path with glowing eyes">
             <div class="comic-caption">
-                The path narrows, swallowed byt angeled roots. A chill, deeper than the air, settles in your bones.
+                The path narrows,A chill, deeper than the air, settles in your bones.
                 "Was that a faint glow? or imagining thing"
             </div>
         </div>
         <div class="choice-container">
             <a href="ranger-path.html" class="btn">Procedd cautiously</a>
             <a href="#" class="btn">Try to call out on the radio</a>
-            <a href="the-clearing.html" class="btn btn-abort">Retreat to the clearing</a>
+            <a href="the-clearing.html" class="btn btn-abort" onclick="animateAndRedirect('the-clearing.html')">Retreat to the clearing</a>
         </div>
     </main>
 
