--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         the forest remembers what you have forgotten.
     </p>
     <br>
-    <a href="scenes/the-clearing.html" class="btn btn-pulse" >Enter the Valley</a>
+    <a href="scenes/van-interior.html" class="btn btn-pulse" >Enter the Valley</a>
 </main>
 
 </body>
