--- a/scenes/the-clearing.html
+++ b/scenes/the-clearing.html
@@ -25,7 +25,7 @@
         <p>
             The trees here are too tall. They block out the sky.
         </p>
-        <label for="reveal-1" class="next-btn">> Look around</label>
+        <label for="reveal-1" class="next-btn">Look around</label>
     </div>
 
 
