--- a/scenes/inspect-stump.html
+++ b/scenes/inspect-stump.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="../style.css">
     <style>
         .background-layer {
-            /* Try to find a close-up image of moss or wood for this one */
-            background-image: url('../assets/stump-close-up.jpg');
+            background-image: url('../thingsUsed/stump-close-up.jpg');
         }
     </style>
 </head>
