--- a/scenes/van-interior.html
+++ b/scenes/van-interior.html
@@ -6,24 +6,24 @@
     <title>Mobile Command Unit</title>
     <link rel="stylesheet" href="../style.css">
     <style>
-        /* Specific vibe for the Van: Warmer, cramped, safe */
+
         .background-layer {
-            /* Placeholder gradient until you find a "Van Interior" image */
+
             background: linear-gradient(to bottom, #1a1a1a, #2c1e1e);
         }
 
-        /* The Van is safe, so let's make the container feel like a dashboard */
+
         .game-container {
-            border-top: 4px solid #555; /* Grey (Neutral/Safe) */
+            border-top: 4px solid #555;
             background: rgba(10, 10, 10, 0.95);
         }
 
-        /* A specific style for "System Messages" on your laptop */
+
         .laptop-screen {
             font-family: 'Courier New', monospace;
             background: #000;
             border: 1px solid #333;
-            color: #4caf50; /* Retro Green terminal text */
+            color: #4caf50;
             padding: 15px;
             margin-bottom: 20px;
             font-size: 0.85rem;
