fixed the nested hidden-content in the-clearing.html and style.css

--- a/scenes/the-clearing.html
+++ b/scenes/the-clearing.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<div class="background-layer"></div>
+<!--<div class="background-layer"></div>-->
 <div class="fog-layer"></div>
 
 <main class="game-container">
@@ -20,10 +20,15 @@
 
     <div class="story-block">
         <p>
-            You slide through the fence. The air tastes metallic. You have stepped off the map and into Ashwood Valley.
+            You slide through the old fence flack of rusted iron brushing on your jacket. The air tastes metallic. You have stepped off the map and into Ashwood Valley.
         </p>
         <p>
-            The trees here are too tall. They block out the sky.
+            The trees here are unnaturally tall, their trunks twisting upward like they’re trying to escape something below. Their branches interlock so tightly that the daylight fades to a dim grey haze.
+            Fog crawls along the forest floor, weaving between roots like it has a mind of its own
+        </p>
+        <p>
+            Somewhere far ahead, you hear a faint clatter "metal on stone, or maybe bone on bark".
+            No one comes out here anymore. No one wants to. You start looking around,
         </p>
         <label for="reveal-1" class="next-btn">Look around</label>
     </div>
@@ -31,7 +36,7 @@
 
     <input type="checkbox" id="reveal-1" class="story-toggle">
 
-    <div class="hidden-content story-block">
+    <div class="hidden-content story-block" >
         <p>
             You scan the area. To your left, an old stump is covered in strange, glowing moss.
         </p>
@@ -39,9 +44,10 @@
             <p class="char-name">RADIO (104.5):</p>
             <span class="char-talk">
                     "...kzzt... I see a flashlight near the fence. Turn it off."
-                </span>
+            </span>
+
         </div>
-        <label for="reveal-2" class="next-btn">> Grab the radio</label>
+        <label for="reveal-2" class="next-btn">Grab the radio</label>
     </div>
 
 
@@ -60,6 +66,8 @@
             <a href="ranger-path.html" class="btn">Ignore him and keep walking</a>
         </div>
     </div>
+
+
 
 </main>
 
