--- a/scenes/the-clearing.html
+++ b/scenes/the-clearing.html
@@ -4,15 +4,10 @@
     <meta charset="UTF-8">
     <title>Sector 1: The Clearing</title>
     <link rel="stylesheet" href="../style.css">
-    <style>
-        .background-layer {
-            background-image: url('../thingsUsed/bg.png');
-        }
-    </style>
 </head>
 <body>
 
-<!--<div class="background-layer"></div>-->
+
 <div class="fog-layer"></div>
 
 <main class="game-container">
@@ -22,6 +17,7 @@
         <p>
             You slide through the old fence flack of rusted iron brushing on your jacket. The air tastes metallic. You have stepped off the map and into Ashwood Valley.
         </p>
+
         <p>
             The trees here are unnaturally tall, their trunks twisting upward like they’re trying to escape something below. Their branches interlock so tightly that the daylight fades to a dim grey haze.
             Fog crawls along the forest floor, weaving between roots like it has a mind of its own
@@ -38,12 +34,12 @@
 
     <div class="hidden-content story-block" >
         <p>
-            You scan the area. To your left, an old stump is covered in strange, glowing moss.
+            You scan the area. To your left, an old stump is covered in leaves, but there is glowing moss.
         </p>
         <div class="radio-msg">
             <p class="char-name">RADIO (104.5):</p>
             <span class="char-talk">
-                    "...kzzt... I see a flashlight near the fence. Turn it off."
+                    "...kzzt... I see a flashlight near the fence. Turn it off.”
             </span>
 
         </div>
@@ -55,10 +51,49 @@
 
     <div class="hidden-content story-block">
         <p>
-            You fumble with the dial, but the static clears on its own.
+            You freeze. The radio wasn’t even on a moment ago.<br>
+
+            You turn the dial in a panic, but the static stabilize on its own, snapping into perfect clarity.<br>
+        </p>
+        <div class="radio-msg">
+            <p class="char-name">RADIO (104.5):</p>
+            <span class="char-talk">
+                    “You’re not supposed to be here,”
+            </span>
+
+        </div>
+        <p>the voice says like someone repeating a warning they’ve given too many times.
+            <br>
+            A cold breeze rolls through the trees. Leaves rustle overhead, but not from the wind more like something moving through them.
+            Your heart beats louder than the static.
         </p>
         <p>
-            "You're not supposed to be here," the voice says.
+            You press the radio to your ear.
+            “Who are you?” you whisper.
+            <br>
+            A pause. Then a faint breath, as if the speaker is standing right behind you.
+            <br>
+        <div class="radio-msg">
+            <p class="char-name">RADIO (104.5):</p>
+            <span class="char-talk">
+                    “...If you’re hearing this, they’ve already noticed you.”
+            </span>
+
+        </div>
+            <br>
+            The signal crackles violently and cuts off. The forest goes silent.
+            <br>
+            Then, somewhere behind you, a twig snaps.
+        </p>
+        <div class="radio-msg">
+            <p class="char-name">RADIO (104.5):</p>
+            <span class="char-talk">
+                    "You're not supposed to be here,"
+            </span>
+
+        </div>
+        <p>
+           the voice says.
         </p>
 
         <div class="choice-container">
