--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<audio autoplay loop id="bg-audio">
-    <source src="thingsUsed/mixkit-forest-birds-chirp-ambiance-69.wav" type="audio/wav">
+<audio autoplay loop>
+    <source src="thingsUsed/introbirds.wav" type="audio/wav">
 </audio>
 
 <div class="background-layer"></div>
