--- a/scenes/inspect-stump.html
+++ b/scenes/inspect-stump.html
@@ -41,7 +41,7 @@
         <p>A shiver runs down your spine. Whoever or whatever did this knew you would see it.
             It hasn't grown randomly. It has been cultivated into a shape.
         </p>
-        <label for="step-1" class="next-btn">> Focus the light</label>
+        <label for="step-1" class="next-btn">Focus the light</label>
     </div>
 
     <input type="checkbox" id="step-1" class="story-toggle">
@@ -64,7 +64,10 @@
         <p>
             Your head throbs. The Sanity Monitor on your wrist beeps once.
         </p>
-        <label for="step-2" class="next-btn">> Take a photo for the Client</label>
+        <div class="hud-text">
+            SANITY: <span class="status-danger">93% (Unstable)</span>
+        </div>
+        <label for="step-2" class="next-btn">Take a photo for the Client</label>
     </div>
 
     <input type="checkbox" id="step-2" class="story-toggle">
@@ -77,7 +80,7 @@
         </p>
 
         <div class="choice-container">
-            <a href="ranger-tower.html" class="btn">Get up and run toward the Tower</a>
+            <a href="ranger-path.html" class="btn">Get up and run toward the Tower</a>
             <a href="../scenes/van-interior.html" class="btn btn-abort">Too dangerous. Leave. (Abort)</a>
         </div>
     </div>
