--- a/scenes/the-clearing.html
+++ b/scenes/the-clearing.html
@@ -26,6 +26,7 @@
             Somewhere far ahead, you hear a faint clatter "metal on stone, or maybe bone on bark".
             No one comes out here anymore. No one wants to. You start looking around,
         </p>
+
         <label for="reveal-1" class="next-btn">Look around</label>
     </div>
 
@@ -39,7 +40,7 @@
         <div class="radio-msg">
             <p class="char-name">RADIO (104.5):</p>
             <span class="char-talk">
-                    "...kzzt... I see a flashlight near the fence. Turn it off.”
+                    “...kzzt... I see a flashlight near the fence. Turn it off.”
             </span>
 
         </div>
