--- a/scenes/van-interior.html
+++ b/scenes/van-interior.html
@@ -66,7 +66,7 @@
     <div class="choice-container">
         <a href="the-clearing.html" class="btn">Grab gear and exit Van</a>
 
-        <a href="#" class="btn" onclick="alert('System Message: Database corrupted. Reboot required.')">Check Database</a>
+        <a href="#" class="btn" onclick="alert('System Message: Database corrupted. Cant find the Transmission. Reboot required.')">Check Transmission Database</a>
 
         <a href="../index.html" class="btn" style="opacity: 0.5;">Rest (Save & Quit)</a>
     </div>
